# rust-releases

./: .gitignore  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md  api.md  bors.toml  deny.toml  justfile  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  diff-lock.yml  fmt.yml  licenses_and_advisories.yml  linter.yml  msrv.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  concepts_rust_releases.md  concepts_rust_toolchain.md  developer_resources.md  introduction.md  sources_rust_changelog.md  sources_rust_channel_manifests.md  sources_rust_dist.md
crates/channel-manifests/: Cargo.toml
crates/channel-manifests/src/: fetch.rs  lib.rs  meta_manifest.rs  release_manifest.rs
crates/compact-index/: Cargo.toml
crates/compact-index/src/: channel_manifest.rs  json.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: channel.rs  errors.rs  index.rs  lib.rs  release.rs
crates/core2/: Cargo.toml
crates/core2/src/: comparable_distribution.rs  distribution.rs  lib.rs  register.rs  release.rs  release_set.rs  set.rs  storage.rs
crates/core2/src/api/: mod.rs
crates/core2/src/distribution/: mod.rs  tests.rs  tests_eq.rs
crates/core2/src/register/: impl.rs  mod.rs  tests.rs
crates/core2/src/release/: tests_eq.rs
crates/core2/src/release_set/: compare.rs  tests.rs
crates/core2/src/release_set/comparator/: version.rs
crates/core2/src/set/: compare.rs  mod.rs  tests.rs
crates/io/: Cargo.toml
crates/io/src/: client.rs  document.rs
crates/rust-changelog/: Cargo.toml
crates/rust-dist-with-cli/: Cargo.toml
crates/rust-dist-with-cli/src/: errors.rs  lib.rs
crates/rust-dist/src/: errors.rs  fetch.rs  lib.rs
crates/rust-release/: CHANGELOG.md  Cargo.toml
crates/rust-release/src/: channel.rs  component.rs  date.rs  lib.rs  target.rs  toolchain.rs  version.rs
crates/rust-releases-channel-manifests/: Cargo.toml
crates/rust-releases-channel-manifests/src/: errors.rs  fetch.rs  lib.rs  meta_manifest.rs  release_manifest.rs
crates/rust-releases-compact-index/src/: json.rs
crates/rust-releases-core/: CHANGELOG.md  Cargo.toml
crates/rust-releases-core/src/: channel.rs  errors.rs  index.rs  lib.rs  merge.rs  next.rs  release.rs  releases.rs  resolver.rs  toolchain.rs
crates/rust-releases-core/src/merge/: builder.rs  from_fn.rs  mod.rs
crates/rust-releases-core/src/merge/strategy/: context.rs  mod.rs  release_date.rs  toolchains.rs
crates/rust-releases-core/src/releases/: beta.rs  mod.rs  nightly.rs  stable.rs
crates/rust-releases-core2/: Cargo.toml
crates/rust-releases-core2/src/: lib.rs  platform.rs  register.rs  release.rs  release_set.rs
crates/rust-releases-core2/src/register/: tests.rs
crates/rust-releases-core2/src/release/: comparator.rs  tests.rs  tests_eq.rs  tests_ord.rs
crates/rust-releases-core2/src/release/comparator/: tests.rs
crates/rust-releases-core2/src/release_set/: comparator.rs  tests.rs
crates/rust-releases-core2/src/release_set/comparator/: date.rs  version.rs
crates/rust-releases-github/: CHANGELOG.md  Cargo.toml
crates/rust-releases-io/: CHANGELOG.md  Cargo.toml
crates/rust-releases-io/src/: client.rs  document.rs  errors.rs  io.rs  lib.rs
crates/rust-releases-io/src/client/: cached_client.rs  client.rs  errors.rs  fs_client.rs  http_cached.rs  remote_client.rs
crates/rust-releases-rust-changelog/: CHANGELOG.md  Cargo.toml
crates/rust-releases-rust-changelog/src/: errors.rs  fetch.rs  lib.rs  url.rs
crates/rust-releases-rust-dist/: CHANGELOG.md  Cargo.toml
crates/rust-releases-rust-dist-with-cli/: Cargo.toml
crates/rust-releases-rust-dist-with-cli/src/: errors.rs  lib.rs
crates/rust-releases-rust-dist/src/: download.rs  errors.rs  fetch.rs  lib.rs
crates/rust-toolchain/: CHANGELOG.md  Cargo.toml
crates/rust-toolchain/src/: channel.rs  component.rs  date.rs  lib.rs  platform.rs  release_date.rs  rust_version.rs  target.rs  tests.rs  toolchain.rs  version.rs
crates/rust-toolchain/src/channel/: beta.rs  nightly.rs  stable.rs
crates/rust-toolchain/src/toolchain/: rustup_toolchain.rs
examples/: list-stable.rs
resources/: beta_2016-03-23.toml  concept_api.txt  nightly_2016-03-08.toml
resources/from_manifests/: manifests.txt  stable_2016-04-12.toml
resources/rust_changelog/: NOTICE.md
resources/rust_dist/: dist_static-rust-lang-org.txt
src/: bisect.rs  channel.rs  dl.rs  errors.rs  index.rs  lib.rs  linear.rs  manifests.rs  release_channel.rs  release_manifest.rs  search.rs  source.rs
src/index/: bisect.rs  linear.rs  mod.rs
src/io/: mod.rs
src/source/: mod.rs
src/source/channel_manifests/: dl.rs  meta_manifest.rs  mod.rs  release_manifest.rs
src/source/dist_index/: dl.rs  mod.rs
src/source/from_manifests/: dl.rs  meta_manifest.rs  mod.rs  release_manifest.rs
src/source/releases_md/: dl.rs  mod.rs
src/source/rust_changelog/: dl.rs  mod.rs
src/source/rust_dist/: dl.rs  mod.rs
src/source/rust_dist_with_cli/: mod.rs
src/strategy/: mod.rs
src/strategy/dist_index/: mod.rs
src/strategy/from_manifests/: dl.rs  meta_manifest.rs  mod.rs  release_manifest.rs
src/strategy/release_manifests/: manifests.rs  mod.rs
src/strategy/releases_md/: dl.rs  mod.rs
