[package]
name = "rust-releases"
version = "0.27.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Find, index and obtain all officially available Rust releases"
license = "MIT OR Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/rust-releases"
repository = "https://github.com/foresterre/rust-releases"
exclude = [
    "/resources", # used by test cases; not relevant for library consumers; approx. 1MB
    "/.github", # version control and CI configs
    "/bors.toml", # CI staging bot config
    "/deny.toml" # dependency license checking config
]
rust-version = "1.67"


[workspace]
members = [
    "crates/core",
    "crates/core2",
    "crates/compact-index",
    "crates/io",
    "crates/channel-manifests",
    "crates/rust-changelog",
    "crates/rust-dist",
    "crates/rust-releases-rust-dist-with-cli", # todo: remove support
    # todo: add rr-github
    "crates/rust-toolchain",
]

[features]
default = [
    "rust-changelog",
]

channel-manifests = ["rust-releases-channel-manifests"]
rust-changelog = ["rust-releases-rust-changelog"]
rust-dist = ["rust-releases-rust-dist"]
rust-dist-with-cli = ["rust-releases-rust-dist-with-cli"]

io = ["rust-releases-io"]
io-http = ["rust-releases-io/http_client"]

[dependencies]
rust-releases-core = { version = "^0.27.0", path = "crates/core" }
rust-releases-io = { version = "^0.27.0", path = "crates/io", optional = true }
rust-releases-channel-manifests = { version = "^0.27.0", path = "crates/channel-manifests", optional = true }
rust-releases-rust-changelog = { version = "^0.27.0", path = "crates/rust-changelog", optional = true }
rust-releases-rust-dist = { version = "^0.27.0", path = "crates/rust-dist", optional = true }
rust-releases-rust-dist-with-cli = { version = "^0.27.0", path = "crates/rust-releases-rust-dist-with-cli", optional = true }

[dev-dependencies]
yare = "1.0.0"
