[package]
name = "rust-releases"
version = "0.30.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Find, index and obtain all officially available Rust releases"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.85"
documentation = "https://docs.rs/rust-releases"
repository = "https://github.com/foresterre/rust-releases"
exclude = [
    "/resources", # used by test cases; not relevant for library consumers; approx. 1MB
    "/.github", # version control and CI configs
    "/bors.toml", # CI staging bot config
    "/deny.toml" # dependency license checking config
]


[workspace]
members = [
    # extra
    "crates/rust-release",
    "crates/rust-toolchain",
    # core & shared impl
    "crates/rust-releases-core",
    "crates/rust-releases-io",
    # sources
    "crates/rust-releases-github",
    "crates/rust-releases-rust-changelog",
    "crates/rust-releases-rust-dist",
]

[features]
default = [
    "rust-changelog",
]

github = ["rust-releases-github"]
rust-changelog = ["rust-releases-rust-changelog"]
rust-dist = ["rust-releases-rust-dist"]

io = ["rust-releases-io"]
io-http = ["rust-releases-io/http_client"]

[dependencies]
# types and shared impl's
rust-releases-core = { workspace = true }
rust-releases-io = { workspace = true, optional = true }

# sources
rust-releases-github = { version = "^0.30.0", path = "crates/rust-releases-github", optional = true }
rust-releases-rust-changelog = { version = "^0.30.0", path = "crates/rust-releases-rust-changelog", optional = true }
rust-releases-rust-dist = { version = "^0.30.0", path = "crates/rust-releases-rust-dist", optional = true }

[dev-dependencies]
yare = { workspace = true }

[workspace.dependencies]
# Declarative error handling
thiserror = "2.0.12"

# Parameterized tests
yare = "3.0.0"

rust-release = { path = "crates/rust-release" }
rust-toolchain = { path = "crates/rust-toolchain" }
rust-releases-core = { version = "^0.30.0", path = "crates/rust-releases-core" }
rust-releases-io = { version = "^0.30.0", path = "crates/rust-releases-io" }