[package]
name = "rust-releases-compact-index"
version = "0.0.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2021"
description = "Generate compact JSON based rust-releases index from the official Rust release channel manifests"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rust-releases"
repository = "https://github.com/foresterre/rust-releases"

[dependencies]
serde = "1"
serde_json = "1"
basic-toml = "0.1"
