[package]
name = "rust-release"
version = "0.0.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2021"
description = "Types which define a Rust release"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/rust-release"
repository = "https://github.com/foresterre/rust-releases"

[dependencies]

[dev-dependencies]

