[package]
name = "rust-releases-channel-manifests"
version = "0.15.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-releases-core = { version = "0.15.0", path = "../rust-releases-core" }
rust-releases-io = { version = "0.15.0", path = "../rust-releases-io", features = ["http_client"] }

thiserror = "1.0.24"

serde = { version = "1", features = ["derive"] }
toml = "0.5"
