[package]
name = "rust-releases-core"
version = "0.22.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
description = "Base traits and definitions for rust-releases"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rust-releases-core"
repository = "https://github.com/foresterre/rust-releases"
rust-version = "1.62"

[dependencies]
thiserror = "1.0.24"
semver = "1.0.0"

[dev-dependencies]
yare = "1.0.1"
