[package]
name = "rust-releases-github"
version = "0.30.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
rust-version = "1.85"
description = "GithubReleases source implementation for rust-releasess"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rust-releases-rust-changelog"
repository = "https://github.com/foresterre/rust-releases"

[dependencies]
rust-releases-core = { version = "^0.30.0", path = "../rust-releases-core" }
rust-releases-io = { version = "^0.30.0", path = "../rust-releases-io", features = ["http_client"] }
thiserror = { workspace = true }
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
yare = "3.0.0"
