[package]
name = "rust-releases-io"
version = "0.22.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
description = "I/O helper crate for rust-releases"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/rust-releases-channel-manifests"
repository = "https://github.com/foresterre/rust-releases"

[package.metadata]
msrv = "1.49"

[features]
http_client = ["attohttpc"]

# NB: excluded from SemVer, please do not use this in your crates
internal_dl_test = []

[dependencies]
thiserror = "1.0.24"

directories-next = "2.0.0"

# feature: http_client
attohttpc = { version = "0.23.1", optional = true }


