[package]
name = "rust-releases-io"
version = "0.30.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
rust-version = "1.64"
description = "I/O helper crate for rust-releases"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rust-releases-io"
repository = "https://github.com/foresterre/rust-releases"

[features]
http_client = ["ureq"]
# NB: excluded from SemVer, please do not use this in your crates
internal_dl_test = []

[dependencies]
directories-next = "2.0.0"
thiserror = { workspace = true }
ureq = { version = "3.0.8", optional = true } # feature: http_client
