[package]
name = "rust-releases-rust-changelog"
version = "0.28.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
description = "RustChangelog source implementation for rust-releasess"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rust-releases-rust-changelog"
repository = "https://github.com/foresterre/rust-releases"
rust-version = "1.67"

[dependencies]
time = { version = "0.3.7", features = ["macros", "parsing"] }
rust-releases-core = { version = "^0.28.0", path = "../rust-releases-core" }
rust-releases-io = { version = "^0.28.0", path = "../rust-releases-io", features = ["http_client"] }
thiserror = "2.0.3"

[dev-dependencies]
yare = "3.0.0"
