[package]
name = "rust-releases-rust-dist-with-cli"
version = "0.17.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
description = "RustDistWithCLI source implementation for rust-releases"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/rust-releases-rust-dist-with-cli"
repository = "https://github.com/foresterre/rust-releases"

[dependencies]
rust-releases-core = { version = "0.16.0", path = "../rust-releases-core" }
rust-releases-io = { version = "0.16.0", path = "../rust-releases-io" }

thiserror = "1.0.24"
