[package]
name = "rust-toolchain"
version = "0.21.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
description = "Types which define a Rust toolchain"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/rust-toolchain"
repository = "https://github.com/foresterre/rust-releases"

[dependencies]

[dev-dependencies]

